--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -11,9 +11,39 @@
     }
 }
 
+
 .animate-up {
     animation-name: up;
     animation-duration: 300ms;
     animation-fill-mode: backwards;
 }
 
+@keyframes right {
+    from { 
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+
+.animate-right {
+    animation-name: right;
+    animation-duration: 300ms;
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.animate-appear {
+    animation-name: appear;
+    animation-duration: 300ms;
+    animation-fill-mode: backwards;
+
+}
