--- a/public/css/orphanage.css
+++ b/public/css/orphanage.css
@@ -34,7 +34,9 @@ aside.sidebar footer button {
 aside.sidebar footer button:hover {
     background: #17d6eb;
 }
-
+main {
+    flex:1;
+}
 .with-sidebar {
     padding-left: 11rem;
 }
@@ -128,4 +130,86 @@ aside.sidebar footer button:hover {
 .map-container footer a {
     color: #0089a5;
     text-decoration: none;
+}
+
+.map-container .leaflet-container {
+    border-bottom: 1px solid #dde3f0;
+    border-radius: 2rem;
+}
+
+.orphanages-details-content hr {
+    width: 100%;
+    height: 1px;
+
+    border: 0;
+
+    background: #d3e2e6;
+
+    margin: 6.4rem 0;
+}
+
+.orphanages-details-content h2 {
+    font-size: 3.6rem;
+    line-height: 1.5rem;
+     color: #4d6f80;
+}
+
+.open-details {
+    margin:2.4rem;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+}
+
+.open-details div {
+    padding: 3.2rem 2.4rem;
+}
+
+.open-details img {
+    display: block;
+    margin-bottom: 2rem;
+}
+
+.open-details .hour {
+    background: linear-gradient(149.97deg, #e6f7fb 8.13%, #ffffff 92.67);
+    border: 1px solid #b3dae2;
+    border-radius: 20px;
+    color: #5c8599;
+}
+
+.open-details .open-on-weekends {
+    background: linear-gradient(154.16deg, #e6f7fb 7.85%, #ffffff 91.03);
+    border: 1px solid #a1e9c5;
+    border-radius: 20px;
+    color: #37c77f;
+}
+
+.primary-button {
+    margin-top: 6.4rem;
+
+    width: 100%;
+    height: 6.4rem;
+    border: 0;
+
+    cursor: pointer;
+
+    background: #3cdc8c;
+
+    border-radius: 2rem;
+    color: #fff;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: background-color .2s;
+}
+
+.primary-button:hover {
+    background: #36cf82;
+}
+
+.primary-button img {
+    margin-right: 1.6rem;
 }
